--- a/index.html
+++ b/index.html
@@ -167,6 +167,14 @@
                     </p>
                   </div>
                 </li>
+                <li>
+                  <a data-bs-toggle="collapse" data-bs-target="#accordion-list-9" class="collapsed">Détection couleur de la palette :<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+                  <div id="accordion-list-9" class="collapse" data-bs-parent=".accordion-list">
+                    <p>
+                      -	Détection couleur de la palette.
+                    </p>
+                  </div>
+                </li>
 
               </ul>
             </div>
@@ -231,7 +239,7 @@
                   </div>
                 </li>
                 <li>
-                  <a data-bs-toggle="collapse" data-bs-target="#accordion-list-14" class="collapsed">Identification de la palette :<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+                  <a data-bs-toggle="collapse" data-bs-target="#accordion-list-14" class="collapsed">Identification de la palette : (RFID, code-barres, etc.)<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
                   <div id="accordion-list-14" class="collapse" data-bs-parent=".accordion-list2">
                     <p>
                       -	Détection d’un code barre, badge RFID et/ou autre marqueur de palette pour liaison avec système de gestion automatisé.</p>
