--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   </section><!-- End Hero -->
 
   <main id="main">
-  <!-- ======= Points de controle Section ======= -->
+      <!-- ======= Points de controle Section ======= -->
   <section id="pdc-section" class="pdc-section section-bg">
     <div class="container" data-aos="fade-up" data-aos-delay="100" data-aos-duration = "800">
 
@@ -171,7 +171,7 @@
                   <a data-bs-toggle="collapse" data-bs-target="#accordion-list-9" class="collapsed">Détection couleur de la palette :<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
                   <div id="accordion-list-9" class="collapse" data-bs-parent=".accordion-list">
                     <p>
-                      -	Détection couleur de la palette.
+                      -	Détection de la couleur de la palette.
                     </p>
                   </div>
                 </li>
@@ -193,8 +193,8 @@
             <div class="accordion-list2">
               <ul>
                 <li>
-                  <a data-bs-toggle="collapse" class="collapsed" data-bs-target="#accordion-list-9">Dimensions de la palette :<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-                  <div id="accordion-list-9" class="collapse" data-bs-parent=".accordion-list2">
+                  <a data-bs-toggle="collapse" class="collapsed" data-bs-target="#accordion-list-10">Dimensions de la palette :<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+                  <div id="accordion-list-10" class="collapse" data-bs-parent=".accordion-list2">
                     <p>
                       - Mesure de la dimension d’une palette chargée dans le sens longueur et/ou largeur.<br>
                       -	Mesure de la charge sur la palette. 
@@ -202,8 +202,8 @@
                 </li>
 
                 <li>
-                  <a data-bs-toggle="collapse" data-bs-target="#accordion-list-10" class="collapsed">Déport de la charge par rapport à la palette :<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-                  <div id="accordion-list-10" class="collapse" data-bs-parent=".accordion-list2">
+                  <a data-bs-toggle="collapse" data-bs-target="#accordion-list-11" class="collapsed">Déport de la charge par rapport à la palette :<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+                  <div id="accordion-list-11" class="collapse" data-bs-parent=".accordion-list2">
                     <p>
                       - Détection d’une charge débordante et/ou trop en retrait dans le sens longueur et/ou largeur.<br>
                       -	Détection d’une charge sur la palette trop haute et/ou trop basse.
@@ -212,8 +212,8 @@
                 </li>
 
                 <li>
-                  <a data-bs-toggle="collapse" data-bs-target="#accordion-list-11" class="collapsed">Flexion des palettes :<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-                  <div id="accordion-list-11" class="collapse" data-bs-parent=".accordion-list2">
+                  <a data-bs-toggle="collapse" data-bs-target="#accordion-list-12" class="collapsed">Flexion des palettes :<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+                  <div id="accordion-list-12" class="collapse" data-bs-parent=".accordion-list2">
                     <p>
                       -	Détection d’une palette qui fléchirait trop lorsque celle-ci est chargée.
                     </p>
@@ -221,8 +221,8 @@
                 </li>
 
                 <li>
-                  <a data-bs-toggle="collapse" data-bs-target="#accordion-list-12" class="collapsed">Passage de fourches :<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-                  <div id="accordion-list-12" class="collapse" data-bs-parent=".accordion-list2">
+                  <a data-bs-toggle="collapse" data-bs-target="#accordion-list-13" class="collapsed">Passage de fourches :<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+                  <div id="accordion-list-13" class="collapse" data-bs-parent=".accordion-list2">
                     <p>
                       - Détection d’un plot tourné dépassant à l’intérieur de la palette.<br>
                       -	Détection de la présence de matière obstruant le passage de fourches.
@@ -231,18 +231,25 @@
                 </li>
 
                 <li>
-                  <a data-bs-toggle="collapse" data-bs-target="#accordion-list-13" class="collapsed">Poids de la palette :<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-                  <div id="accordion-list-13" class="collapse" data-bs-parent=".accordion-list2">
+                  <a data-bs-toggle="collapse" data-bs-target="#accordion-list-14" class="collapsed">Poids de la palette :<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+                  <div id="accordion-list-14" class="collapse" data-bs-parent=".accordion-list2">
                     <p>
                       -	Mesure du poids de la palette chargée.
                     </p>
                   </div>
                 </li>
                 <li>
-                  <a data-bs-toggle="collapse" data-bs-target="#accordion-list-14" class="collapsed">Identification de la palette : (RFID, code-barres, etc.)<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-                  <div id="accordion-list-14" class="collapse" data-bs-parent=".accordion-list2">
+                  <a data-bs-toggle="collapse" data-bs-target="#accordion-list-15" class="collapsed">Identification de la palette (RFID, code-barres, etc.) :<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+                  <div id="accordion-list-15" class="collapse" data-bs-parent=".accordion-list2">
                     <p>
                       -	Détection d’un code barre, badge RFID et/ou autre marqueur de palette pour liaison avec système de gestion automatisé.</p>
+                  </div>
+                </li>
+                <li>
+                  <a data-bs-toggle="collapse" data-bs-target="#accordion-list-16" class="collapsed"> Lisibilité de l'identification :<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+                  <div id="accordion-list-16" class="collapse" data-bs-parent=".accordion-list2">
+                    <p>
+                      -	Vérifie la lisibilité d'une étiquette, un code-barres, un badge RFID et/ou tout autre marqueur de palette.</p>
                   </div>
                 </li>
 
