--- a/en/index.html
+++ b/en/index.html
@@ -83,7 +83,7 @@
   </section><!-- End Hero -->
 
   <main id="main">
-  <!-- ======= Points de controle Section ======= -->
+      <!-- ======= Points de controle Section ======= -->
   <section id="pdc-section" class="pdc-section section-bg">
     <div class="container" data-aos="fade-up" data-aos-delay="100" data-aos-duration = "800">
 
@@ -170,6 +170,14 @@
                     </p>
                   </div>
                 </li>
+                <li>
+                  <a data-bs-toggle="collapse" data-bs-target="#accordion-list-9" class="collapsed">Palette Color Detection:<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+                  <div id="accordion-list-9" class="collapse" data-bs-parent=".accordion-list">
+                    <p>
+                      - Palette Color Detection.
+                    </p>
+                  </div>
+                </li>
 
               </ul>
             </div>
@@ -188,8 +196,8 @@
             <div class="accordion-list2">
               <ul>
                 <li>
-                  <a data-bs-toggle="collapse" class="collapsed" data-bs-target="#accordion-list-9">Pallet dimensions:<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-                  <div id="accordion-list-9" class="collapse" data-bs-parent=".accordion-list2">
+                  <a data-bs-toggle="collapse" class="collapsed" data-bs-target="#accordion-list-10">Pallet dimensions:<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+                  <div id="accordion-list-10" class="collapse" data-bs-parent=".accordion-list2">
                     <p>
                       - Measurement of the dimension of a loaded pallet in the length and/or width direction. <br>
                       - Measurement of the load on the pallet.
@@ -198,8 +206,8 @@
                 </li>
 
                 <li>
-                  <a data-bs-toggle="collapse" data-bs-target="#accordion-list-10" class="collapsed">Offset of the load in relation to the pallet:<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-                  <div id="accordion-list-10" class="collapse" data-bs-parent=".accordion-list2">
+                  <a data-bs-toggle="collapse" data-bs-target="#accordion-list-11" class="collapsed">Offset of the load in relation to the pallet:<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+                  <div id="accordion-list-11" class="collapse" data-bs-parent=".accordion-list2">
                     <p>
                       - Detection of a load overhanging and/or too far back in the length and/or width direction.<br>
                       - Detection of a load on the pallet too high and/or too low.
@@ -208,15 +216,15 @@
                 </li>
 
                 <li>
-                  <a data-bs-toggle="collapse" data-bs-target="#accordion-list-11" class="collapsed">Pallet bending:<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-                  <div id="accordion-list-11" class="collapse" data-bs-parent=".accordion-list2">
+                  <a data-bs-toggle="collapse" data-bs-target="#accordion-list-12" class="collapsed">Pallet bending:<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+                  <div id="accordion-list-12" class="collapse" data-bs-parent=".accordion-list2">
                     <p>- Detection of a pallet that flexes too much when loaded.</p>
                   </div>
                 </li>
 
                 <li>
-                  <a data-bs-toggle="collapse" data-bs-target="#accordion-list-12" class="collapsed">Fork passage:<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-                  <div id="accordion-list-12" class="collapse" data-bs-parent=".accordion-list2">
+                  <a data-bs-toggle="collapse" data-bs-target="#accordion-list-13" class="collapsed">Fork passage:<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+                  <div id="accordion-list-13" class="collapse" data-bs-parent=".accordion-list2">
                     <p>
                       - Detection of a turned pin protruding inside the pallet.<br>
                       - Detection of the presence of material obstructing the passage of forks.
@@ -225,15 +233,21 @@
                 </li>
 
                 <li>
-                  <a data-bs-toggle="collapse" data-bs-target="#accordion-list-13" class="collapsed">Pallet weight:<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-                  <div id="accordion-list-13" class="collapse" data-bs-parent=".accordion-list2">
+                  <a data-bs-toggle="collapse" data-bs-target="#accordion-list-14" class="collapsed">Pallet weight:<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+                  <div id="accordion-list-14" class="collapse" data-bs-parent=".accordion-list2">
                     <p>- Measurement of the weight of the loaded pallet.</p>
                   </div>
                 </li>
                 <li>
-                  <a data-bs-toggle="collapse" data-bs-target="#accordion-list-14" class="collapsed">Pallet identification:<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-                  <div id="accordion-list-14" class="collapse" data-bs-parent=".accordion-list2">
+                  <a data-bs-toggle="collapse" data-bs-target="#accordion-list-15" class="collapsed">Pallet identification (RFID, barecode, label, etc.):<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+                  <div id="accordion-list-15" class="collapse" data-bs-parent=".accordion-list2">
                     <p>- Detection of a barcode, RFID badge and/or other pallet marker for connection to an automated management system.</p>
+                  </div>
+                </li>
+                <li>
+                  <a data-bs-toggle="collapse" data-bs-target="#accordion-list-16" class="collapsed">Readability of identification:<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+                  <div id="accordion-list-16" class="collapse" data-bs-parent=".accordion-list2">
+                    <p>- Checks the readability of a label, barcode, RFID tag and/or any other pallet marker.</p>
                   </div>
                 </li>
 
