--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                   </div>
                 </li>
                 <li>
-                  <a data-bs-toggle="collapse" data-bs-target="#accordion-list-9" class="collapsed">Détection couleur de la palette :<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+                  <a data-bs-toggle="collapse" data-bs-target="#accordion-list-9" class="collapsed">Couleur de la palette :<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
                   <div id="accordion-list-9" class="collapse" data-bs-parent=".accordion-list">
                     <p>
                       -	Détection de la couleur de la palette.
