--- a/en/index.html
+++ b/en/index.html
@@ -171,10 +171,10 @@
                   </div>
                 </li>
                 <li>
-                  <a data-bs-toggle="collapse" data-bs-target="#accordion-list-9" class="collapsed">Palette Color Detection:<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+                  <a data-bs-toggle="collapse" data-bs-target="#accordion-list-9" class="collapsed">Pallet color:<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
                   <div id="accordion-list-9" class="collapse" data-bs-parent=".accordion-list">
                     <p>
-                      - Palette Color Detection.
+                      - Identification of the color of the pallet.
                     </p>
                   </div>
                 </li>
@@ -399,7 +399,7 @@
             <p>The system consists of a pallet infeed and outfeed line, a MASTERPAL<sup>®</sup> testing device, a stacking and outfeed line for "conforming pallets", a second line for "second choice pallets" and a final line for non-conforming pallets.</p>
             <p>
               <span>
-                - Production rate: 120 palettes/heure <br>
+                - Production rate: 120 palets/hour <br>
                 - Pallet format: Europe 800*1200<br>
                 - Removal and pick-up of pallet stacks by forklift operator<br>
                 - Stack height: 15 pallets
