--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <div class="row justify-content-center">
         <div class="col-lg-7 col-md-12 text-center ">
           <h2>Des points de contrôle entièremment paramétrables</h2>
-          <h3>Une configuration sur-mesure en fonction des défauts que vous désirez detecter.</h3>
+          <h3>Une configuration sur-mesure en fonction des défauts que vous désirez détecter.</h3>
         </div>
       </div>
 
@@ -136,9 +136,9 @@
                   <a data-bs-toggle="collapse" data-bs-target="#accordion-list-4" class="collapsed">Dimensions :<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
                   <div id="accordion-list-4" class="collapse" data-bs-parent=".accordion-list">
                     <p>
-                      - Détection d’une palette trop longue ou trop petite ; trop large ou pas assez ; trop haute ou pas assez.<br>
+                      - Détection d’une palette trop longue ou trop petite, trop large ou pas assez, trop haute ou pas assez.<br>
                       -	Cette détection permet de contrôler des plots tournés vers l’extérieur (dans le sens longueur et/ou largeur). <br>
-                      -	Détection de clous qui dépassent de trop ; Attention : Pas de détection de clous s’ils ne dépassent pas de plus de 10mm.
+                      -	Détection de clous qui dépassent. Attention : pas de détection de clous s’ils ne dépassent pas de plus de 10mm.
                     </p>
                   </div>
                 </li>
@@ -316,8 +316,8 @@
               <h4><span>[CAS LOGISTIQUE : DANONE]</span><br> LIGNE DE CONTROLE MASTERPAL<sup>®</sup> PALETTES VIDES</h4>
               <hr class="separateur">
               <div class="description">
-              <p>Pour son nouveau centre logistique de Viry-Châtillon, DANONE a fait appel à MARCEAU pour résoudre un problème de tri de palettes vides.Le nouveau centre logistique traite les palettes qui sont livrées sur le secteur Ile de France. Toutes les palettes vides des magasins sont récupérées, triées et les moins abîmées sont renvoyées sur les sites de production.</p>
-              <p>Pour effectuer ces différentes opérations, MARCEAU a conçu une machine de contrôle et tri automatique de type MASTERPAL<sup>®</sup> avec trois choix possibles : palette conforme ; palette non conforme et palette deuxième choix. Les palettes deuxième choix sont réutilisées sur site pour faire de la préparation de commande.</p>
+              <p>Pour son nouveau centre logistique de Viry-Châtillon, DANONE a fait appel à MARCEAU pour résoudre un problème de tri de palettes vides. Le nouveau centre logistique traite les palettes qui sont livrées sur le secteur Ile de France. Toutes les palettes vides des magasins sont récupérées, triées et les moins abîmées sont renvoyées sur les sites de production.</p>
+              <p>Pour effectuer ces différentes opérations, MARCEAU a conçu une machine de contrôle et tri automatique de type MASTERPAL<sup>®</sup> avec trois choix possibles : palette conforme, palette non conforme et palette deuxième choix. Les palettes deuxième choix sont réutilisées sur site pour faire de la préparation de commande.</p>
               <p>L’installation se compose d’une ligne d’alimentation et dépilage palettes, d’un appareil de contrôle MASTERPAL<sup>®</sup>, d’une ligne d’empilage et évacuation « palettes conformes », d’une seconde ligne « palettes deuxième choix » et d’une dernière pour les palettes non conformes.</p>
               <p><span>
                 - Cadence de l’installation : 240 palettes/heure <br>
