--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <div class="col-xl-6 col-lg-12 d-flex flex-column" data-aos="fade-up" data-aos-delay="300" data-aos-duration = "800">
           <div class="product-cards">
             <div class="vid-container">
-              <iframe src="https://www.youtube-nocookie.com/embed//Y-4fvv_xY_g?showinfo=0&modestbranding=1&controls=1&rel=0" width="100%" height="300px" class="embed-responsive-item" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"allowfullscreen showinfo="0"></iframe>
+              <iframe src="https://www.youtube-nocookie.com/embed//NlZkNxZvACE?showinfo=0&modestbranding=1&controls=1&rel=0" width="100%" height="300px" class="embed-responsive-item" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"allowfullscreen showinfo="0"></iframe>
               </div>   
           
             <div class="card-info">
@@ -184,7 +184,7 @@
         <div class="col-xl-6 col-lg-12 d-flex flex-column" data-aos="fade-up" data-aos-delay="300" data-aos-duration = "800">
           <div class="product-cards">
             <div class="vid-container">
-              <iframe src="https://www.youtube-nocookie.com/embed//3D3xHaFA0-4?showinfo=0&modestbranding=1&controls=1&rel=0" width="100%" height="300px" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"allowfullscreen></iframe>
+              <iframe src="https://www.youtube-nocookie.com/embed//GkvcIVXt7Ss?showinfo=0&modestbranding=1&controls=1&rel=0" width="100%" height="300px" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"allowfullscreen></iframe>
               </div> 
           <div class="card-info">
               <h4>Points de contrôle disponibles pour les palettes chargées :</h4>
