--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                 - Dépose piles de palettes par cariste, reprise palettes deuxième choix par AGV<br>
                 - Hauteur de piles : 15 palettes
               </span></p>
-              <a href="https://marceau.fr/fr/demandez-un-devis.html" target="_blank" class="btn-application text-center justify-content-around">Téléchargez notre brochure</a>
+              <a href="assets/documentation-masterpal-fr.pdf" target="_blank" class="btn-application text-center justify-content-around">Téléchargez notre brochure</a>
             </div>
           </div>
             <div class="col-xl-6 col-lg-12 d-flexflex-column">
@@ -407,7 +407,7 @@
                   - Hauteur de piles : 15 palettes
                 </span>
               </p>
-              <a href="https://marceau.fr/fr/demandez-un-devis.html" target="_blank" class="btn-application text-center justify-content-around">Téléchargez notre brochure</a>
+              <a href="assets/documentation-masterpal-fr.pdf" target="_blank" class="btn-application text-center justify-content-around">Téléchargez notre brochure</a>
             </div>
           </div>
           </div>
@@ -431,7 +431,7 @@
                   - Précision de positionnement : plus ou moins 10mm
                 </span>
                 </p>
-                <a href="https://marceau.fr/fr/demandez-un-devis.html" target="_blank" class="btn-application text-center justify-content-around">Téléchargez notre brochure</a>
+                <a href="assets/documentation-masterpal-fr.pdf" target="_blank" class="btn-application text-center justify-content-around">Téléchargez notre brochure</a>
               </div>
             </div>
               <div class="col-xl-6 col-lg-12 d-flex flex-column">
@@ -512,7 +512,7 @@
                   - Précision de positionnement : plus ou moins 10mm
                 </span>
                 </p>
-                <a href="https://marceau.fr/fr/demandez-un-devis.html" target="_blank" class="btn-application text-center justify-content-around">Téléchargez notre brochure</a>
+                <a href="assets/documentation-masterpal-fr.pdf" target="_blank" class="btn-application text-center justify-content-around">Téléchargez notre brochure</a>
               </div>
             </div>
             </div>
